--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "url-2-qrcode",
   "version": "1.0.0",
-  "description": "A service to create a QR code from an URL",
+  "description": "A small service to create a QR code from an URL",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "sthoelscher",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
