--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A small service to create a QR code from an URL",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sthoelscher",
