--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "qrcode": "^1.5.1",
+    "typescript": "^5.6.2",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
